--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <HTML>
 <HEAD>
 <TITLE>Peter's Playground</TITLE>
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
 </HEAD>
-<H1>This is a Header</H1>
+<H1 style="font-family:'Orbitron';font-size:18px">This is a Header</H1>
 <H2>This is a Medium Header</H2>
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
